[gd_scene load_steps=43 format=2]

[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer9.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer10.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer2.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer.gd" type="Script" id=5]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer8.png" type="Texture" id=6]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer3.png" type="Texture" id=7]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer4.png" type="Texture" id=8]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer15.png" type="Texture" id=9]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer12.png" type="Texture" id=10]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer13.png" type="Texture" id=11]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer14.png" type="Texture" id=12]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer11.png" type="Texture" id=13]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer23.png" type="Texture" id=14]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer16.png" type="Texture" id=15]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer19.png" type="Texture" id=16]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer21.png" type="Texture" id=17]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer20.png" type="Texture" id=18]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer18.png" type="Texture" id=19]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer22.png" type="Texture" id=20]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer17.png" type="Texture" id=21]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer24.png" type="Texture" id=22]
[ext_resource path="res://Characters/Enimes/DefaultScripts/DamagePlayer.gd" type="Script" id=23]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer7.png" type="Texture" id=24]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer6.png" type="Texture" id=25]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallPlayer5.png" type="Texture" id=26]
[ext_resource path="res://Characters/Enimes/miniBosses/BossTakingDamage.gd" type="Script" id=27]
[ext_resource path="res://Characters/Enimes/ParticalEffects/Explosions/32Size/32Size4.png" type="Texture" id=28]
[ext_resource path="res://Characters/Enimes/ParticalEffects/Explosions/32Size/32Size5.png" type="Texture" id=29]
[ext_resource path="res://Characters/Enimes/ParticalEffects/Explosions/32Size/32Size7.png" type="Texture" id=30]
[ext_resource path="res://Characters/Enimes/ParticalEffects/Explosions/32Size/32Size6.png" type="Texture" id=31]
[ext_resource path="res://Characters/Enimes/ParticalEffects/Explosions/32Size/32Size3.png" type="Texture" id=32]

[sub_resource type="Animation" id=1]
resource_name = "BeginCharge"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Hitpoint:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Hitpoint:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.95, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Charging"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Hitpoint:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Hitpoint:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.91, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Jump"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "KickBall"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 14 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "KickFootBall"
}, {
"args": [  ],
"method": "KickCompleat"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RestTime"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "TurnAround"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "Flip"
}, {
"args": [  ],
"method": "RestTime"
} ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 28.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 18.0

[sub_resource type="Animation" id=9]
resource_name = "Dead"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 39.77, -0.25, 0, 0.25, 0, 39.77, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 31.95, -0.25, 0, 0.25, 0, 31.95, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 32.16, -0.25, 0, 0.25, 0, 32.16, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 32 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 30 ), null ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Dead"
} ]
}

[sub_resource type="Animation" id=10]
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 33.33, -0.25, 0, 0.25, 0, 33.33, -0.25, 0, 0.25, 0, 5.1, -0.25, 0, 0.25, 0, 5.1, -0.25, 0, 0.25, 0, 33.33, -0.25, 0, 0.25, 0, 33.33, -0.25, 0, 0.25, 0, 5.1, -0.25, 0, 0.25, 0, 5.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22.49, -0.25, 0, 0.25, 0, 22.49, -0.25, 0, 0.25, 0, 1.29, -0.25, 0, 0.25, 0, 1.29, -0.25, 0, 0.25, 0, 22.49, -0.25, 0, 0.25, 0, 22.49, -0.25, 0, 0.25, 0, 1.29, -0.25, 0, 0.25, 0, 1.29, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 13.45, -0.25, 0, 0.25, 0, 13.45, -0.25, 0, 0.25, 0, 1.91, -0.25, 0, 0.25, 0, 1.91, -0.25, 0, 0.25, 0, 13.45, -0.25, 0, 0.25, 0, 13.45, -0.25, 0, 0.25, 0, 1.91, -0.25, 0, 0.25, 0, 1.91, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 )
}

[node name="FootBallPlayer" type="KinematicBody2D"]
position = Vector2( 4390, -2176 )
collision_layer = 1024
collision_mask = 128
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, -32 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BeginCharge = SubResource( 1 )
anims/Charging = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/KickBall = SubResource( 4 )
anims/Still = SubResource( 5 )
anims/TurnAround = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -28 )
shape = SubResource( 7 )

[node name="Hitpoint" type="Area2D" parent="."]
scale = Vector2( 1, 0.91 )
collision_layer = 4
collision_mask = 128
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitpoint"]
position = Vector2( -2, -28 )
shape = SubResource( 8 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 27 )
AreaWeakness = "BossProjectile"
AriaDamageDelt = 1

[node name="FootBallSpawnPoint" type="Position2D" parent="."]
position = Vector2( -25, -15 )

[node name="HitAnim" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 9 )
anims/Hit = SubResource( 10 )

[node name="WallDetect" type="RayCast2D" parent="."]
position = Vector2( 0, -9 )
cast_to = Vector2( -29, 0 )
collision_mask = 2
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="area_entered" from="Hitpoint" to="Node2D" method="_on_Hitpoint_area_entered"]
[connection signal="body_entered" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_entered"]
[connection signal="body_exited" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_exited"]
